JumpScript/tests/baselines/reference/unusedTypeParameterInMethod2.errors.txt
tests/cases/compiler/unusedTypeParameterInMethod2.jump(2,18): error TS6133: 'Y' is declared but its value is never read.


==== tests/cases/compiler/unusedTypeParameterInMethod2.jump (1 errors) ====
    class A {
        public f1<X, Y, Z>() {
                     ~
!!! error TS6133: 'Y' is declared but its value is never read.
            var a: X;
            var b: Z;
            a;
            b;
        }
    }